--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [How to Use VLookup in Excel]
+title: Los Angeles Crime Data Exploration
 description: Kendahl Toft COSC 460 Spring 2024
